# demo-cmake

./: CMakeLists.txt  foo.cpp  main.cpp
my_library/: CMakeLists.txt  foo.cpp  my_library.cpp
src/: foo.cpp
